--- a/index.html
+++ b/index.html
@@ -2,7 +2,4 @@
 <h1>Added new features</h1>
 <h1>Added some new features extra</h1>
 <br>
-<h1>Footer</h1>
-<h1>Footer</h1>
-<h1>Footer</h1>
-<h1>Footer</h1>
+<h1>Footer Style</h1>
